--- a/css/style.css
+++ b/css/style.css
@@ -31,3 +31,10 @@
     cursor: pointer;
 }
 
+.red{
+    background-color: brown;
+    color: black;
+    height: calc(100vh/ 12);
+    border: 1px solid white;
+    cursor: pointer;
+}
